--- a/profil.css
+++ b/profil.css
@@ -105,7 +105,7 @@ h1 {
     background-color: #c0392b;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 600px) {
  
  body{
 
