--- a/login.css
+++ b/login.css
@@ -73,7 +73,7 @@ font-size: 2rem;
     body{
         display: flex;
        flex-direction: column;
-        width: 100%;
+        width: 50%;
         
     }
     
@@ -87,6 +87,7 @@ font-size: 2rem;
      }
      input{
         width: 30vw;
+        font-size: 3vw;
      }
    
     }
