--- a/profil.css
+++ b/profil.css
@@ -109,17 +109,17 @@ h1 {
  
  body{
 
-    width: 100%;
+    width: 50%;
     margin-top: 2vh;
  }
  .section-2{
     margin-top: 50%;
  }
  #articles-list{
-    height: 180vh;
+    height: 100%;
  }
  #logout, .delete-article{
-    width: 12vw;
+    width: 14vw;
     height: 5vh;
  }
 }
